tests/cases/errors/invalid-variable/undefined-reference/input.sym
{ :name $user
, :age 28
}
